--- a/enhancements.tex
+++ b/enhancements.tex
@@ -19,9 +19,9 @@
 
 \item Describe your enhancement \#1 here
 	\begin{itemize}
-	\item Brief description of what the enhancement is (if it's a puzzle, also describe what steps the player must take to solve it):
-	\item Complexity level (choose from low/medium/high):
-	\item Reasons you believe this is the complexity level (e.g. mention implementation details, how much code did you have to add/change from the baseline, what challenges did you face, etc.)
+	\item Brief description of what the enhancement is (if it's a puzzle, also describe what steps the player must take to solve it): each of the three main items(t-card, lucky pen, and cheat sheet) are put in a location that has a puzzle that must be solved to get the item. The puzzle is presented in the form of a text description, and a simple and short answer is taken as input. There is the option to ask for a hint as well if the uder is having difficulty, and to leave the puzzle to try again later. The puzzles include one word puzzle, one message with the answer encoded in the text, and one safe that simply asks for a 3 digit number. The first 2 puzzles are text pased puzzles to read, think about, and answer, but the last comes more from observing surroundings.
+	\item Complexity level (choose from low/medium/high): *We must choose between medium and high on this one
+	\item 
 	% Feel free to add more subheadings if you need
 	\end{itemize}
 
@@ -30,7 +30,7 @@
 %	\begin{itemize}
 %	\item Basic description of what the enhancement is:
 %	\item Complexity level (low/medium/high):
-%	\item Reasons you believe this is the complexity level (e.g. mention implementation details 
+%	\item Reasons you believe this is the complexity level (e.g. mention implementation details. Reasons you believe this is the complexity level (e.g. mention implementation details, how much code did you have to add/change from the baseline, what challenges did you face, etc.) 
 %	% Feel free to add more subheadings if you feel the need
 %	\end{itemize}
 
