--- a/enhancements.tex
+++ b/enhancements.tex
@@ -33,7 +33,7 @@
  
 \item Describe your enhancement \#3 here
 	\begin{itemize}
-	\item Brief description of what the enhancement is (if it's a puzzle, also describe what steps the player must take to solve it): We created an extra feature where many locations had coins that could be discovered and could be used to purchase items at the shop/bookstore. The items could be used at the end of the game to decide the ending. The coins are not added to the inventory, but rather to the player's money attribute. 
+	\item Brief description of what the enhancement is (if it's a puzzle, also describe what steps the player must take to solve it): We created an extra feature where many locations had coins that could be discovered and could be used to purchase items at the shop/bookstore. The items could be used at the end of the game to decide the ending. The coins are not added to the inventory, but rather to the player's money attribute. ...
 	\item Complexity level (choose from low/medium/high): high
 	\item  We rated this high because it involved implementation of a lot of coding features. From the implementation of a subclass ShopLocation and further implementation that extended to both the locations initialization and items initialization. Within the shop, there were various procedures that took place to purchase items. 
 	\end{itemize}
@@ -42,14 +42,14 @@
 	\begin{itemize}
 	\item Brief description of what the enhancement is (if it's a puzzle, also describe what steps the player must take to solve it): In our game, we have alternative endings as per the extra items we aquire in the shop. These can be special in good and bad ways. 
 	\item Complexity level (choose from low/medium/high): medium
-	\item  We rated this medium because it involved a ....
+	\item  We rated this medium because it involved adding and dropping items to and from the inventory ...
 	\end{itemize}
  
 \item Describe your enhancement \#5 here
 	\begin{itemize}
-	\item Brief description of what the enhancement is (if it's a puzzle, also describe what steps the player must take to solve it): Aside from the main puzzles, and general discovery of the coins, we have a mini bubble tea drop quest. We aquire the bubble tea from the Bahen center, and give it to a person at Sidney Smith
+	\item Brief description of what the enhancement is (if it's a puzzle, also describe what steps the player must take to solve it): Aside from the main puzzles, and general discovery of the coins, we have a mini bubble tea drop quest. We aquire the bubble tea from the Bahen center, and give it to a person at Sidney Smith, who in return gives us a lucky eraser.
 	\item Complexity level (choose from low/medium/high): medium
-	\item  We rated this medium because it involved ...
+	\item  We rated this medium because it involved examing the inventory and separating the possibel outcomes based on what the player's inventory contained...
 	\end{itemize}
  
 
